feat: add suppliers grid section, email input with icon, subscribe button spacing, and image hover scale transition effects

--- a/components/footer.html
+++ b/components/footer.html
@@ -81,10 +81,10 @@
         <h3 class="column-title">Get app</h3>
         <div class="app-badges">
           <button class="app-badge">
-            <img src="../assets/Image/Misc/apple.png" alt="" />
+            <img src="../assets/Image/Misc/market-button.png" alt="" />
           </button>
           <button class="app-badge">
-            <img src="../assets/Image/Misc/playStore.png" alt="" />
+            <img src="../assets/Image/Misc/Group.png" alt="" />
           </button>
         </div>
       </div>
@@ -93,6 +93,7 @@
 
   <!-- Copyright Section -->
   <div class="copyright-section">
-    <p>© 2023 Ecommerce.</p>
+    <p>© 2025 Ecommerce.</p>
+    <img src="../assets/Image/flags/pak.jpg" alt="" />
   </div>
 </footer>
