--- a/components/header.html
+++ b/components/header.html
@@ -37,11 +37,12 @@
         <span>Profile</span>
       </button>
       <button class="icon">
-        <img src="../assets/icons/message.png" alt="message" />
+        <img src="../assets/icons/Message-icon.png" alt="message" />
         <span>Message</span>
       </button>
       <button class="icon">
-        <img src="../assets/icons/order.png" alt="order" /> <span>Orders</span>
+        <img src="../assets/icons/order-icon.png" alt="order" />
+        <span>Orders</span>
       </button>
       <button class="icon">
         <img src="../assets/icons/cart.png" alt="cart" /> <span>My Cart</span>
