--- a/css/styles.css
+++ b/css/styles.css
@@ -794,3 +794,116 @@
   padding: 10px;
   background-color: #d1e7ff;
 }
+/* ==================================suppliers by region============================== */
+.suppliers-section {
+  /* margin-top: 10px; */
+  width: 100%;
+  padding: 40px 0;
+}
+
+.suppliers-section h2 {
+  font-size: 24px;
+  font-weight: 600;
+  margin-bottom: 25px;
+}
+
+.suppliers-grid {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 25px 60px;
+}
+
+.supplier-item {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.supplier-item img {
+  width: 30px;
+  height: 20 px;
+  object-fit: cover;
+  border: 1px solid #ddd;
+}
+
+.country {
+  margin: 0;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: -0.2px;
+  color: #1c1c1c;
+}
+
+.url {
+  margin: 0;
+  font-size: 12px;
+  color: #999;
+}
+
+/* =======================================Subscribe on our newsletter======================= */
+.subscribe-container {
+  /* margin-top: 30px; */
+  background-color: #eff2f4;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 190px;
+}
+.subscribe-container h2 {
+  font-size: 20px;
+  font-weight: 600px;
+  line-height: 28px;
+  letter-spacing: -0.2px;
+  color: #1c1c1c;
+}
+.subscribe-container p {
+  color: #606060;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: -0.2px;
+}
+.input-subscribe-btn {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-top: 21px;
+}
+.input-icon {
+  width: 274px;
+  height: 40px;
+  padding: 10px 10px 10px 40px; /* space for icon */
+  font-size: 14px;
+
+  background-image: url("../assets/icons/email-icon.png"); /* your icon */
+  background-size: 18px;
+  background-repeat: no-repeat;
+  background-position: 10px center;
+
+  background-color: #ffffff;
+
+  border: 1px solid #dee2e7;
+  border-radius: 6px;
+  outline: none;
+}
+.subecribe-button {
+  width: 110px;
+  height: 40px;
+
+  background-color: #0067ff;
+  border-radius: 6px;
+  border: 1px solid #0067ff;
+  outline: none;
+  color: #ffffff;
+
+  cursor: pointer;
+
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 100%;
+}
+.subecribe-button:hover {
+  background-color: #0056d6;
+}
