Add and customize multiple pages

--- a/components/header.html
+++ b/components/header.html
@@ -5,11 +5,7 @@
   <div class="top-bar">
     <!-- Logo -->
     <div class="logo">
-      <img
-        src="../assets/Image/logo-symbol.png"
-        alt="logo"
-        class="logo-image"
-      />
+      <img src="../assets/Image/logo-symbol.png" alt="logo" class="logo-image" />
       <span>Brands</span>
     </div>
 
@@ -44,9 +40,10 @@
         <img src="../assets/icons/order-icon.png" alt="order" />
         <span>Orders</span>
       </button>
-      <button class="icon">
+      <a href="/pages/cart.html" class="icon"
+        style="text-decoration: none; color: inherit; display: flex; flex-direction: column; align-items: center; border: none; background: none; cursor: pointer;">
         <img src="../assets/icons/cart.png" alt="cart" /> <span>My Cart</span>
-      </button>
+      </a>
     </div>
   </div>
   <!-- END TOP BAR -->
