--- a/css/product-list.css
+++ b/css/product-list.css
@@ -2,7 +2,7 @@
 .main-container {
   max-width: 100%;
   /* margin: 0 auto; */
-  padding: 20px;
+  padding: 20px 60px;
   background-color: #f8f9fa;
   /* Light background for the whole page area */
 }
