Add all pages and updates

--- a/components/footer.html
+++ b/components/footer.html
@@ -12,21 +12,22 @@
       <p class="brand-tagline">gles here but now lorem ipsum is</p>
       <!-- <p class="brand-year">2023 Ecommerce.</p> -->
       <div class="socail-icon-container">
-        <button class="socail-btn">
-          <img src="../assets/icons/facebook.svg" alt="icon" />
-        </button>
-        <button class="socail-btn">
-          <img src="../assets/icons/twitter.svg" alt="icon" />
-        </button>
-        <button class="socail-btn">
-          <img src="../assets/icons/linkedin.svg" alt="icon" />
-        </button>
-        <button class="socail-btn">
-          <img src="../assets/icons/instagram.svg" alt="icon" />
-        </button>
-        <button class="socail-btn">
-          <img src="../assets/icons/youtube.svg" alt="icon" />
-        </button>
+        <a href="https://www.facebook.com/share/1D3YWQvSkh/" class="socail-btn" target="_blank">
+          <img src="../assets/icons/facebook.svg" alt="Facebook" />
+        </a>
+        <a href="https://github.com/afnanmuhammad" class="socail-btn" target="_blank"
+          style="display: flex; justify-content: center; align-items: center; text-decoration: none;">
+          <i class="fa-brands fa-github" style="color: white; font-size: 18px;"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/m-afnan" class="socail-btn" target="_blank">
+          <img src="../assets/icons/linkedin.svg" alt="LinkedIn" />
+        </a>
+        <a href="https://www.instagram.com/afno_bangash" class="socail-btn" target="_blank">
+          <img src="../assets/icons/instagram.svg" alt="Instagram" />
+        </a>
+        <a href="#" class="socail-btn">
+          <img src="../assets/icons/youtube.svg" alt="Youtube" />
+        </a>
       </div>
     </div>
 
@@ -36,10 +37,10 @@
       <div class="link-column">
         <h3 class="column-title">About</h3>
         <ul class="link-list">
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Find store</a></li>
-          <li><a href="#">Categories</a></li>
-          <li><a href="#">Blogs</a></li>
+          <li><a href="/pages/about.html">About Us</a></li>
+          <li><a href="/pages/store-locator.html">Find store</a></li>
+          <li><a href="/pages/product-list.html">Categories</a></li>
+          <li><a href="/pages/blogs.html">Blogs</a></li>
         </ul>
       </div>
 
@@ -47,10 +48,10 @@
       <div class="link-column">
         <h3 class="column-title">Partnership</h3>
         <ul class="link-list">
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Find store</a></li>
-          <li><a href="#">Categories</a></li>
-          <li><a href="#">Blogs</a></li>
+          <li><a href="/pages/about.html">About Us</a></li>
+          <li><a href="/pages/store-locator.html">Find store</a></li>
+          <li><a href="/pages/product-list.html">Categories</a></li>
+          <li><a href="/pages/blogs.html">Blogs</a></li>
         </ul>
       </div>
 
@@ -58,10 +59,10 @@
       <div class="link-column">
         <h3 class="column-title">Information</h3>
         <ul class="link-list">
-          <li><a href="#">Help Center</a></li>
-          <li><a href="#">Money Refund</a></li>
-          <li><a href="#">Shipping</a></li>
-          <li><a href="#">Contact us</a></li>
+          <li><a href="/pages/help.html">Help Center</a></li>
+          <li><a href="/pages/refund.html">Money Refund</a></li>
+          <li><a href="/pages/shipping.html">Shipping</a></li>
+          <li><a href="/pages/contact.html">Contact us</a></li>
         </ul>
       </div>
 
